--- a/package.json
+++ b/package.json
@@ -12,14 +12,23 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "~7.2.0",
+    "@angular/cdk": "^7.3.3",
     "@angular/common": "~7.2.0",
     "@angular/compiler": "~7.2.0",
     "@angular/core": "~7.2.0",
+    "@angular/flex-layout": "^7.0.0-beta.23",
     "@angular/forms": "~7.2.0",
+    "@angular/http": "^7.2.6",
+    "@angular/material": "^7.3.3",
     "@angular/platform-browser": "~7.2.0",
     "@angular/platform-browser-dynamic": "~7.2.0",
     "@angular/router": "~7.2.0",
     "core-js": "^2.5.4",
+    "graph-data-structure": "^1.8.0",
+    "mxgraph": "^3.9.12",
+    "ng2-ace-editor": "^0.3.9",
+    "ngx-clipboard": "^11.1.9",
+    "ngx-json-viewer": "^2.4.0",
     "rxjs": "~6.3.3",
     "tslib": "^1.9.0",
     "zone.js": "~0.8.26"
