--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "angular-draw-graph-project",
-  "version": "0.0.0",
+  "version": "0.1.0",
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
@@ -11,36 +11,36 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "~7.2.0",
+    "@angular/animations": "~7.2.6",
     "@angular/cdk": "^7.3.3",
-    "@angular/common": "~7.2.0",
-    "@angular/compiler": "~7.2.0",
-    "@angular/core": "~7.2.0",
+    "@angular/common": "~7.2.6",
+    "@angular/compiler": "~7.2.6",
+    "@angular/core": "~7.2.6",
     "@angular/flex-layout": "^7.0.0-beta.23",
-    "@angular/forms": "~7.2.0",
+    "@angular/forms": "~7.2.6",
     "@angular/http": "^7.2.6",
     "@angular/material": "^7.3.3",
-    "@angular/platform-browser": "~7.2.0",
-    "@angular/platform-browser-dynamic": "~7.2.0",
-    "@angular/router": "~7.2.0",
+    "@angular/platform-browser": "~7.2.6",
+    "@angular/platform-browser-dynamic": "~7.2.6",
+    "@angular/router": "~7.2.6",
     "core-js": "^2.5.4",
     "graph-data-structure": "^1.8.0",
     "mxgraph": "^3.9.12",
     "ng2-ace-editor": "^0.3.9",
     "ngx-clipboard": "^11.1.9",
     "ngx-json-viewer": "^2.4.0",
-    "rxjs": "~6.3.3",
+    "rxjs": "~6.4.0",
     "tslib": "^1.9.0",
     "zone.js": "~0.8.26"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.13.0",
-    "@angular/cli": "~7.3.2",
-    "@angular/compiler-cli": "~7.2.0",
-    "@angular/language-service": "~7.2.0",
-    "@types/node": "~8.9.4",
+    "@angular/cli": "~7.3.3",
+    "@angular/compiler-cli": "~7.2.6",
+    "@angular/language-service": "~7.2.6",
     "@types/jasmine": "~2.8.8",
     "@types/jasminewd2": "~2.0.3",
+    "@types/node": "~8.9.4",
     "codelyzer": "~4.5.0",
     "jasmine-core": "~2.99.1",
     "jasmine-spec-reporter": "~4.2.1",
@@ -52,6 +52,6 @@
     "protractor": "~5.4.0",
     "ts-node": "~7.0.0",
     "tslint": "~5.11.0",
-    "typescript": "~3.2.2"
+    "typescript": "^3.2.4"
   }
 }
