--- a/package.json
+++ b/package.json
@@ -3,26 +3,28 @@
   "version": "0.1.0",
   "scripts": {
     "ng": "ng",
-    "start": "ng serve",
+    "start": "ng serve --ssl true --ssl-cert '/Users/avivlevitski/Angular Projects/AngularDrawGraph/certs/server.crt'  --ssl-key '/Users/avivlevitski/Angular Projects/AngularDrawGraph/certs/server.key'",
     "build": "ng build",
+    "build:prod": "ng build --prod",
+    "build:dev": "ng build",
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e"
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "~7.2.6",
+    "@angular/animations": "~7.2.7",
     "@angular/cdk": "^7.3.3",
-    "@angular/common": "~7.2.6",
-    "@angular/compiler": "~7.2.6",
-    "@angular/core": "~7.2.6",
+    "@angular/common": "~7.2.7",
+    "@angular/compiler": "~7.2.7",
+    "@angular/core": "~7.2.7",
     "@angular/flex-layout": "^7.0.0-beta.23",
-    "@angular/forms": "~7.2.6",
-    "@angular/http": "^7.2.6",
+    "@angular/forms": "~7.2.7",
+    "@angular/http": "^7.2.7",
     "@angular/material": "^7.3.3",
-    "@angular/platform-browser": "~7.2.6",
-    "@angular/platform-browser-dynamic": "~7.2.6",
-    "@angular/router": "~7.2.6",
+    "@angular/platform-browser": "~7.2.7",
+    "@angular/platform-browser-dynamic": "~7.2.7",
+    "@angular/router": "~7.2.7",
     "core-js": "^2.5.4",
     "graph-data-structure": "^1.8.0",
     "mxgraph": "^3.9.12",
@@ -35,9 +37,9 @@
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.13.0",
-    "@angular/cli": "~7.3.3",
-    "@angular/compiler-cli": "~7.2.6",
-    "@angular/language-service": "~7.2.6",
+    "@angular/cli": "~7.3.4",
+    "@angular/compiler-cli": "~7.2.7",
+    "@angular/language-service": "~7.2.7",
     "@types/jasmine": "~2.8.8",
     "@types/jasminewd2": "~2.0.3",
     "@types/node": "~8.9.4",
