--- a/package.json
+++ b/package.json
@@ -25,9 +25,11 @@
     "@angular/platform-browser": "~7.2.7",
     "@angular/platform-browser-dynamic": "~7.2.7",
     "@angular/router": "~7.2.7",
+    "angular-oauth2-oidc": "^5.0.2",
     "bootstrap": "^4.3.1",
     "core-js": "^2.5.4",
     "graph-data-structure": "^1.8.0",
+    "jquery": "^3.3.1",
     "mxgraph": "^3.9.12",
     "ng2-ace-editor": "^0.3.9",
     "ngx-clipboard": "^11.1.9",
